--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,159 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/*****************  BASE HEADER-FOOTER Styles  **********************/
 
+header, footer{
+  margin:0;
+  padding:0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+/************  HEADER  *******************************************/
+
+header .content-wrapper{
+  display:flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+a{
+  padding: 10px;
+}
+nav{
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      width:100%;
+}
+nav ul{
+  margin:0;    
+  display:flex;  
+}
+nav ul li {
+      display: flex;
+      justify-content: space-around;
+      list-style: none;  
+}
+footer .content-wrapper{
+
+}
+.footer-content{
+
+}
+address .contact{
+
+}
+footer .social icons{
+  display:flex;
+}
+footer .social{
+  display: flex;
+}
+.copyright{
+
+}
+/*********************  MAIN ****************/
+.hero-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width:100%;
+}
+main{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 100%;
+}
+aside{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+aside .form-description{
+    display: flex;
+    flex-flow: row wrap;
+}
+aside .form{
+    display:flex;
+    flex-flow: row wrap;
+}
+.features{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.features .features-items{
+    display: flex;
+    flex-flow: row wrap;
+}
+.features-items article{
+  display: flex;
+  flex-flow:row wrap;
+}
+  article p .fontawsome-icon{
+
+  }
+   article p .features-item-description{
+
+  }
+
+.reviews{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 100%;
+}
+
+.reviews .review{
+
+}
+.mission{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.mission-content{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+figure{
+
+}
+.contact-section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.general-info{
+  display:flex;
+}
+.facilitator{
+  display:flex;
+}
+.faq .content-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.faq .question-answer{
+  display:flex;
+}
+
+
+
+/*****************  Mobile Styles --  Homepage  ********************/
 /* ==========================================================================
    Helper classes
    ========================================================================== */
