--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 /*****************  BASE HEADER-FOOTER Styles  **********************/
-
+body{
+  font-size: 16px;
+  margin:0;
+  padding:0;
+}
 header, footer{
   margin:10px;
   padding:0;
@@ -126,8 +130,25 @@ header nav ul li {
       justify-content: space-around; 
 
 }
-h1, h2, h3, p {
-  padding: 0 15px;
+h1, h2, h3, h4{
+  padding: 0 20px;
+}
+h1{
+  font-family: "Poppins",sans-serif;
+  font-size: 2.25em;
+}
+h2{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.875em;
+}
+h3{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125em;
+}
+p{
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.875em;
+  padding:0;
 }
 .footer p{
   margin: 0;
@@ -179,7 +200,6 @@ aside .form input{
   width: 85%;
 }
 
-}
 .features .features-items{
     display: flex;
     justify-content: center;
@@ -206,6 +226,9 @@ aside .form input{
   align-items: center;
   flex-flow: row wrap;
 }
+.mission p{
+  padding: 0 20px;
+}
 
 .contact-section{
   display: flex;
@@ -213,18 +236,31 @@ aside .form input{
   align-items: center;
   flex-flow: row wrap;
 }
+.contact-content p, .contact-content a{
+  padding: 0 20px;
+}
 /************** Mobile Styles FAQ page   *******************/
 .faq{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 .faq .content-wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 15px;
+}
+.faq h2{
+  padding: 0 20px 20px 0;
+}
+.faq h4{
+  margin:0;
+  padding:0 20;
+  width:100%;
 }
 
 
