--- a/css/main.css
+++ b/css/main.css
@@ -86,30 +86,34 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*****************  BASE HEADER-FOOTER Styles  **********************/
-body{
-  font-size: 16px;
-  margin:0;
-  padding:0;
+.content-wrapper{
+  width: 90%;
+  margin: 50px;
 }
+   /*****************  BASE HEADER-FOOTER Styles  **********************/
+
 header, footer{
-  margin:10px;
-  padding:0;
+  
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
-
+header{
+  padding:15px 0;
+}
 header .content-wrapper{
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  width: 100%;
+  margin:0;
 }
 .header-divider{
-  width: 97%;
+
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
 }
 header nav{
       display: flex;
@@ -117,44 +121,28 @@ header nav{
       align-items: center;
       flex-flow: row wrap;
       width:60%;
-      padding: 15px;
 }
 header nav ul{   
   display:flex; 
   justify-content: space-around; 
-  padding-left:0;
+  width:100%;
 }
 header nav ul li {
       list-style: none; 
-      display:flex; 
-      justify-content: space-around; 
-
+      
 }
-h1, h2, h3, h4{
-  padding: 0 20px;
+footer{
+ flex-direction:column;
 }
-h1{
-  font-family: "Poppins",sans-serif;
-  font-size: 2.25em;
-}
-h2{
-  font-family: "Poppins", sans-serif;
-  font-size: 1.875em;
-}
-h3{
-  font-family: "Poppins", sans-serif;
-  font-size: 1.125em;
-}
-p{
-  font-family: "Open Sans", sans-serif;
-  font-size: 0.875em;
-  padding:0;
-}
-.footer p{
-  margin: 0;
+footer p{
+  margin:0;
 }
 footer .content-wrapper{
   width:55%;
+  margin: 50px 0;
+}
+footer .contact{
+  margin-bottom: 50px;
 }
 footer .social-icons{
   display:flex;
@@ -167,11 +155,13 @@ footer .social-icons p{
   justify-content: center;
   align-items: center;
 }
+footer .copyright{
+  margin: 20px 0;
+}
 /*****************  Mobile Styles --  Homepage  ********************/
 .hero-area {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
 }
 
@@ -181,18 +171,12 @@ aside{
   align-items: center;
   flex-flow: row wrap;
 }
-aside h3 {
-  padding-top: 25px;
-  padding-left: 0;
-}
-aside .form{
-  padding-left: 15px;
-}
 aside .form input{
   width:88%;
   box-sizing:border-box;
   padding-left: 15px;
 }
+
 .features{
   display: flex;
   justify-content: center;
@@ -214,7 +198,11 @@ aside .form input{
   flex-flow: row wrap;
 }
 .reviews h2{
-  width: 80%;
+  margin-bottom: 40px;
+}
+reviews h3{
+  width: 55%;
+  margin: 20px 0;
 }
 .contact, .social{
   text-align: center;
@@ -259,8 +247,25 @@ aside .form input{
 }
 .faq h4{
   margin:0;
-  padding:0 20;
+  padding:0 20px;
   width:100%;
+}
+h1{
+  font-family: "Poppins",sans-serif;
+  font-size: 2.25em;
+}
+h2{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.875em;
+}
+h3{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125em;
+}
+p{
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.875em;
+  
 }
 
 
@@ -355,23 +360,153 @@ aside .form input{
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+   /**************  TABLET STYLES  ********************************************/
+
+@media only screen and (min-width: 768px){
+  .content-wrapper{
+    max-width:640px;
+    margin: 100px;
+  }
+  h1{
+    font-family: "Poppins",sans-serif;
+    font-size: 48px;
+    padding:0;
+    margin: 0;
+  }
+  h2{
+    font-family: "Poppins",sans-serif;
+    font-size: 36px;
+    
+  }
+  
+ h3{
+   font-family: "Poppins", sans-serif;
+   font-size: 24px;
+   line-height: 30px;
+   padding:0;
+ }
+ p{
+  font-family: "Open sans", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+ }
+          /******************   HEADER   ***************************/
+  header{
+    width: 100%;
+  }
+  header .content-wrapper{
+    width: 78%;
+  }
+  header nav{
+    width: 50%;
+  }
+  header nav ul{
+    display:flex;
+    justify-content: space-between;
+  }
+  header nav ul li{
+    display:flex;
+    justify-content: space-between;
+  }
+  .header-divider{
+    display:none;
+  }
+           /**************************   MAIN   **************************/
+
+  .hero-area .content-wrapper{
+    width: 100%;
+  }
+              /***************      ASIDE   ******************************/
+
+  aside .content-wrapper{
+    margin: 50px  0;
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-flow: row wrap;
+  }
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form{
+    width: 40%;
+    margin: 0;
+  }
+  aside .content-wrapper .form{
+    padding-left: 100px;
+  }
+                /**************      FEATURES        *****************/
+
+  .features{
+    width: 100%;
+  }
+  .features .content-wrapper{
+    margin: 50px  0;
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-flow: row wrap;
+  }
+  .features .features-items{
+    width:100%;
+    display: flex;
+    justify-content:space-between ;
+    flex-flow:row wrap;
+    padding: 25px 100px;
+  }
+  .features .features-items article{
+    width: 40%;
+    text-align: center;
+  }
+                /******************   REVIEWS   ************************/
+.reviews{
+    width: 100%
+  }
+.reviews .content-wrapper{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    margin:50px 0;
+    width: 100%;
+  }
+ .reviews h2{
+   margin: 0 50px;
+   width: 70%;
+   display: flex;
+ }
+  .reviews article{
+    display: flex;
+    justify-content:center ;
+    flex-flow: row wrap;
+    width: 40%;
+    margin: 0 50px;
+  }
+  .reviews  article img{
+    display: flex;
+    
+  }
+  .reviews article h3, 
+  .reviews article  p{
+    display: flex;
+} 
+/**************** DESKTOP STYLES  ***************/
+@media only screen and (min-width: 1200px){
+
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
 
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
-
+@media print,
+  (-webkit-min-device-pixel-ratio: 1.25),
+  (min-resolution: 1.25dppx),
+  (min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */
+}
 @media print {
   *,
   *::before,
