--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,7 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-.content-wrapper{
-  width: 90%;
-  margin: 50px;
-}
+
    /*****************  BASE HEADER-FOOTER Styles  **********************/
 
 header, footer{
@@ -99,15 +96,13 @@ header, footer{
   align-items: center;
   flex-flow: row wrap;
 }
-header{
-  padding:15px 0;
-}
+
 header .content-wrapper{
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin:0;
+ 
 }
 .header-divider{
 
@@ -116,34 +111,22 @@ header .content-wrapper{
   margin: 10px 0 20px 0;
 }
 header nav{
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-flow: row wrap;
-      width:60%;
+     
+      width: 100%;
 }
+
 header nav ul{   
   display:flex; 
   justify-content: space-around; 
-  width:100%;
+  padding-left:0;
+  
 }
+
 header nav ul li {
       list-style: none; 
       
 }
-footer{
- flex-direction:column;
-}
-footer p{
-  margin:0;
-}
-footer .content-wrapper{
-  width:55%;
-  margin: 50px 0;
-}
-footer .contact{
-  margin-bottom: 50px;
-}
+
 footer .social-icons{
   display:flex;
   justify-content: space-around;
@@ -156,7 +139,8 @@ footer .social-icons p{
   align-items: center;
 }
 footer .copyright{
-  margin: 20px 0;
+  width: 100%;
+  text-align:center;
 }
 /*****************  Mobile Styles --  Homepage  ********************/
 .hero-area {
@@ -182,6 +166,9 @@ aside .form input{
   justify-content: center;
   flex-flow: row wrap;
   width: 85%;
+}
+.features h2{
+  width: 100%;
 }
 
 .features .features-items{
@@ -250,6 +237,11 @@ reviews h3{
   padding:0 20px;
   width:100%;
 }
+.faq .faq-content{
+  width: 100%;
+}
+
+
 h1{
   font-family: "Poppins",sans-serif;
   font-size: 2.25em;
@@ -362,10 +354,10 @@ p{
 
    /**************  TABLET STYLES  HOMEPAGE  ********************************************/
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) and (min-width: 1199px){
+  
   .content-wrapper{
     max-width:640px;
-    margin: 100px;
   }
   h1{
     font-family: "Poppins",sans-serif;
@@ -376,7 +368,6 @@ p{
   h2{
     font-family: "Poppins",sans-serif;
     font-size: 36px;
-    
   }
   
  h3{
@@ -385,11 +376,13 @@ p{
    line-height: 30px;
    padding:0;
  }
+
  h4{
    font-family: "Poppins", sans-serif;
    font-size: 14px;
    line-height: 18px;;
  }
+
  p{
   font-family: "Open sans", sans-serif;
   font-size: 14px;
@@ -399,21 +392,26 @@ p{
   header{
     width: 100%;
   }
+
   header .content-wrapper{
     justify-content: space-between;
     margin: 30px 50px;
+    width: 100%;
   }
+
   header nav{
     width: 30%;
   }
+
   header nav ul{
     display:flex;
-  
   }
+
   header nav ul li{
     display:flex;
     justify-content: space-around;
   }
+
   .header-divider{
     display:none;
   }
@@ -432,11 +430,13 @@ p{
     align-items: stretch;
     flex-flow: row wrap;
   }
+
   aside .content-wrapper .form-description,
   aside .content-wrapper .form{
     width: 40%;
     margin: 0;
   }
+
   aside .content-wrapper .form{
     padding-left: 100px;
   }
@@ -445,6 +445,7 @@ p{
   .features{
     width: 100%;
   }
+
   .features .content-wrapper{
     margin: 50px  0;
     width:100%;
@@ -453,6 +454,7 @@ p{
     align-items: stretch;
     flex-flow: row wrap;
   }
+
   .features .features-items{
     width:100%;
     display: flex;
@@ -460,6 +462,7 @@ p{
     flex-flow:row wrap;
     padding: 25px 100px;
   }
+
   .features .features-items article{
     width: 40%;
     text-align: center;
@@ -468,6 +471,7 @@ p{
 .reviews{
     width: 100%
   }
+
 .reviews .content-wrapper{
     display:flex;
     justify-content: center;
@@ -476,35 +480,39 @@ p{
     margin: 0 50px;
     width: 100%;
   }
+
  .reviews h2{
    width: 70%;
    display: flex;
    padding-left: 50px;
  }
+
    .reviews .review-content{
     display: flex;
     margin-right: 50px;
-    
   }
+
   .reviews .review-content img,
   .reviews .review-content h3, 
   .reviews  .review-content p{
     display: flex;
     flex: 1 1 auto;
     width: 50%;
-    
   }
+
  .reviews .review-content img{
    background-color: gray;
    width: 300px;
    height: 220px;
    padding-left: 50px;
  }
+
   .reviews .review-content h3 {
     margin-top:0;
     padding-left: 15px;
     width: 100%;
   }
+
   .reviews .review-content p{
     padding-left:15px;
     width: 100%
@@ -518,81 +526,123 @@ p{
     flex-flow: row wrap;
     width: 75%;
   }
+
   footer .footer-content {
     display: flex;
     justify-content: space-around;
     width: 100%;
   }
+
   footer .footer-content address .contact,
   footer .footer-content .social{
-    width: 200px;
-    
+    width: 50%;
   }
+
   footer .footer-content h4{
     padding: 30px 100px;
   }
-} 
-
-
    /**************  TABLET STYLES  ABOUT ********************************************/
+  
+  .mission .content-wrapper{
+    margin: 0 50px;
+    display:flex;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-flow: row wrap;
+  }
+  .mission h2{
+    width: 100%;
+  }
+  .mission p{
+    display: flex;
+    width: 48%;
+    padding: 0;
+  }
+  .contact-section .content-wrapper{
+    margin: 0 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-flow: row wrap;
+  }
+  .contact-section h2{
+    width: 80%;
+  }
+  .contact-section .contact-content{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0;
+  }
+  /**************  TABLET STYLES  FAQ  **********************/
 
-
-.mission .content-wrapper{
-  margin: 0 50px;
-  display:flex;
-  justify-content: space-between;
-  align-items: stretch;
-  flex-flow: row wrap;
-}
-.mission h2{
-  width: 100%;
-}
-.mission p{
-  display: flex;
-  width: 48%;
-  padding: 0;
-}
-.contact-section .content-wrapper{
-  margin: 0 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-flow: row wrap;
-}
-.contact-section h2{
-  width: 80%;
-}
-.contact-section .contact-content{
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 0;
-}
- /**************  TABLET STYLES  FAQ  **********************/
-.faq .content-wrapper{
-  margin: 0 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-flow: row wrap;
-}
-.faq h2{
-  width: 80%;
-}
-.faq .faq-content{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  width:50%;
-  padding: 0;
+  .faq .content-wrapper{
+    margin: 0 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-flow: row wrap;
+  } 
+  .faq h2{
+    width: 80%;
+  }
+  .faq .faq-content{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width:50%;
+    padding: 0;
+  }
 }
 
-/**************** DESKTOP STYLES  ***************/
+/*================================  DESKTOP STYLES  ===============================*/
+/****************  HOMEPAGE  ***************/
 @media only screen and (min-width: 1200px){
+  
+  .content-wrapper{
+    max-width: 960px;
+  }
+  .header-divider{
+    display:none;
+  }
+  .header nav{
+    width: 15%;
+  }
+  /***********  Hero ***************/
 
+  .hero-area h1{
+    width: 72%;
+  }
+
+  /************** Aside  *****************/
+  aside .content-wrapper{
+    justify-content: space-around;
+  }
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form{
+    width: 33%;
+  }
+  /**************** Features  *************/
+  .features h2{
+    width: 83%;
+  }
+  .features article{
+    flex-basis: 200px;
+  }
+  /*****************  Reviews   **************/
+  .reviews .review-content div{
+    width:83%;
+  }
+/* ============================================  About page  =================*/
+  .mission h2,
+  .contact-section .content-wrapper{
+    width:96%;
+  }
+  /*============================================  FAQ Page   ========*/
+  .faq h2{
+    width: 100%;
+  }
 }
-
-
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
