fixed desktop faq page padding

--- a/css/main.css
+++ b/css/main.css
@@ -639,8 +639,15 @@ p{
     width:96%;
   }
   /*============================================  FAQ Page   ========*/
+  .faq{
+    padding: 0;
+  }
   .faq h2{
     width: 100%;
+  }
+
+  .faq .faq-content h4{
+    padding:0;
   }
 }
 /* ==========================================================================
