--- a/css/main.css
+++ b/css/main.css
@@ -97,27 +97,35 @@ body{
   font-size: 1em;  
   font-family: 'Open Sans', sans-serif;
   text-align:left;
+  color: #e2e3ed;
 }
 
 ul,
 ol{
     list-style-type: none;
+    text-transform: uppercase;
+    font-weight: bold;
 }
   
 a{
     color: #e2e3ed;
     text-decoration: none;
+   
 }
   
 h2{
     font-family: 'Poppins',sans-serif;
     font-size: 1.875em;
+    font-weight:400;
+    color: #e2e3ed;
 } 
 
 h3, h4{
     font-family: 'Poppins',sans-serif;
     font-size: 1.125em;
+    font-weight: 400;
     margin: 20px 0;
+    color: #e2e3ed;
 }
 
 p{
@@ -147,6 +155,7 @@ header, footer{
 }
 
 header{
+  background-color: #3a3838;
   padding: 15px 0;
 }
 
@@ -178,8 +187,11 @@ header nav ul{
   width: 100%;
 }
 
+
 footer {
   flex-direction: column;
+  background-color: #202322;
+  
 }
 
 footer p{
@@ -191,6 +203,7 @@ footer .content-wrapper{
 }
 footer .footer-content{
   margin-bottom: 50px;
+  text-align: center;
 }
 
 footer .social-icons{
@@ -222,11 +235,31 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
-aside .form input{
-  width:88%;
+aside .form{
+  margin-top: 30px;
+}
+
+input[type=text]{
+  width:100%;
   box-sizing:border-box;
-  padding-left: 15px;
+  color: #9d9ea4;
+  font-style: italic;
+  padding: 1em;
+}
+input[type=button]{
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* Features */
@@ -235,6 +268,7 @@ aside .form input{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #160d04;
 }
 
 .features h2{
@@ -261,11 +295,13 @@ aside .form input{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a
 }
+
 .reviews h2{
   margin-bottom: 40px;
 }
-reviews h3{
+.reviews h3{
   width: 55%;
   margin: 20px 0;
 }
@@ -405,7 +441,7 @@ reviews h3{
 
    /**************  TABLET STYLES  HOMEPAGE  ********************************************/
 
-@media only screen and (min-width: 768px) and (min-width: 1199px){
+@media only screen and (min-width: 768px){
   
   /* General Styles  */
   .content-wrapper{
@@ -413,6 +449,16 @@ reviews h3{
     margin: 100px 0;
   }
   
+  h2{
+    font-size: 2.25em;
+    line-height: 1.33;
+  }
+  
+  h3, h4{
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   /*   HEADER   */
   
   header{
@@ -426,20 +472,25 @@ reviews h3{
   }
 
   header nav{
-    width: 30%;
+    width: 20%;
   }
 
   header nav ul{
     justify-content: space-between;
   }
 
-  .header-divider{
-    display:none;
+  header .header-divider{
+    display: none;
   }
            /**************************   MAIN   **************************/
 
   /* .hero-area */
-  
+  .hero-area h1{
+      font-size: 3em;
+      line-height: 1;
+      margin: 0;
+  }
+
   /*  ASIDE  **/
 
   aside .content-wrapper{
@@ -466,6 +517,9 @@ reviews h3{
     flex-basis: 50%;
   }
 
+  .features h2{
+    width: 85%;
+}
   .features .features-item-description{
     width: 62%;
   }
@@ -477,10 +531,17 @@ reviews h3{
     justify-content: space-between;
 }
 
+.reviews h2{
+  width: 65%;
+}
+
 .reviews article div{
     width: 49%
   }
-
+.reviews h3{
+  width: 75%;
+  margin:0;
+}
 /* FOOTER  */
 
   footer .content-wrapper{
@@ -497,7 +558,12 @@ reviews h3{
   footer .contact{
     margin-bottom: 0;
   }
-
+  footer h4{
+    margin-bottom: 40px;
+  }
+  footer p{
+  line-height: 1.285;
+}
   footer .copyright{
     width: 100%;
   }
@@ -529,6 +595,7 @@ reviews h3{
                   TABLET STYLES  FAQ  
   =================================================================*/
 
+
   .faq .content-wrapper{
     display: flex;
     justify-content: space-between;
@@ -547,8 +614,20 @@ reviews h3{
 ======================================================================================*/
 
 /* HOMEPAGE */
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width:1200px){
   
+  h2{
+    font-size: 2.25em;
+  }
+
+  h3, h4{
+    font-size: 1.875em;
+  }
+  
+  p{ 
+    font-size: 1.125em;
+    line-height: 1.33;
+}
   header{
     padding: 15px 0;
   }
@@ -560,10 +639,12 @@ reviews h3{
   /*  Hero */
 
   .hero-area h1{
-    width: 60%;
+      font-size: 3.75em;
+      width: 60%;
   }
 
   /************** Aside  *****************/
+
   aside .content-wrapper{
     justify-content: space-around;
   }
@@ -571,7 +652,11 @@ reviews h3{
   aside .content-wrapper .form{
     width: 33%;
   }
-  /**************** Features  *************/
+  aside .content-wrapper .form-description p{
+    font-weight: 400;
+    line-height: 1.5em;
+  }
+  /* Features */
   .features h2{
     width: 90%;
   }
@@ -579,13 +664,19 @@ reviews h3{
     flex-basis: 33%;
   }
   /*  Reviews  */
-
+  .reviews h2{
+    width: 70%;
+  }
   .reviews article div{
-    width: 40%;
+    width: 50%;
+  }
+  .copyright{
+    padding-bottom: 15px;
   }
 /* ============================================  About page  =================*/
-  .mission h2,
-  .contact-section .content-wrapper{
+ 
+.mission h2,
+  .contact-section .content-wrapper h2{
     width:96%;
   }
   /*============================================  FAQ Page   ========*/
@@ -593,7 +684,6 @@ reviews h3{
   .faq h2{
     width: 100%;
   }
-  
 }
 /* ==========================================================================
    Print styles.
