--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ ol{
     list-style-type: none;
     text-transform: uppercase;
     font-weight: bold;
+    padding:0;
 }
   
 a{
@@ -130,12 +131,20 @@ h3, h4{
 
 p{
     font-family: 'Open Sans', sans-serif;
+    font-weight:300;
     font-size: 0.875em;
     line-height: 1.285em;
 }
   
 address{
   font-style: normal;
+}
+
+img{
+  width: 100%;
+}
+figure{
+  margin:0;
 }
 
 .content-wrapper{
@@ -156,7 +165,6 @@ header, footer{
 
 header{
   background-color: #3a3838;
-  padding: 15px 0;
 }
 
 header .content-wrapper{
@@ -165,6 +173,15 @@ header .content-wrapper{
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
+}
+
+header figure{
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-flow: row wrap;
+  padding-top:15px;
 }
 
 .header-divider{
@@ -222,11 +239,26 @@ footer .copyright{
   text-align:center;
 }
 /*****************  Mobile Styles --  Homepage  ********************/
-.hero-area {
+
+.hero-area{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-image: url('file:///Users/sharonkahn/Desktop/web-dev/responsive-design/unplugged-retreat/img/jake-melara-web-30679-unsplash.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height:500px;
 }
+
+.hero-area h1{
+  font-family:'Poppins', sans-serif;
+  font-size: 2.25em;
+  font-weight: 400;
+  line-height: 1em;
+  margin:0;
+}
+
 
 /* Aside */
 
@@ -272,8 +304,10 @@ input[type=button]{
 }
 
 .features h2{
-  margin-bottom: 60px;
+  margin: 50px 10px;
+  line-height:1.2;
 }
+
 .features article{
   width: 63%;
   margin: 30px 0;
@@ -466,6 +500,10 @@ input[type=button]{
     padding: 33px 0;
   }
 
+  header figure{
+    width:30%;
+  }
+
   header .content-wrapper{
     justify-content: space-between;
     width: 100%;
@@ -485,6 +523,10 @@ input[type=button]{
            /**************************   MAIN   **************************/
 
   /* .hero-area */
+  .hero-area{
+    height:600px;
+  }
+
   .hero-area h1{
       font-size: 3em;
       line-height: 1;
@@ -497,7 +539,7 @@ input[type=button]{
     margin: 50px  0;
     display:flex;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
     flex-flow: row wrap;
   }
 
@@ -506,7 +548,9 @@ input[type=button]{
     width: 40%;
     margin: 0;
   }
-  
+  input[type=button]{
+    padding:11px 0;
+  }
   /*    FEATURES  **/
 
   .features article{
@@ -518,26 +562,40 @@ input[type=button]{
   }
 
   .features h2{
-    width: 85%;
+    width: 100%;
+    margin:0;
 }
   .features .features-item-description{
     width: 62%;
   }
               
   /* REVIEWS  */
+.reviews .content-wrapper{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+.reviews h2{
+  width: 80%;
+  margin-top:0;
+}
+.reviews figure{
+  display:flex;
+  width:49%;
+}
+.reviews img{
+  width: 100%;
+}
 
 .reviews article{
     display:flex;
     justify-content: space-between;
-}
-
-.reviews h2{
-  width: 65%;
-}
-
-.reviews article div{
     width: 49%
   }
+  .reviews article div{
+    width: 100%;
+  }
+  
 .reviews h3{
   width: 75%;
   margin:0;
@@ -632,6 +690,14 @@ input[type=button]{
     padding: 15px 0;
   }
 
+  header figure{
+    width:25%;
+  }
+
+header nav{
+  width:15%;
+}
+
   .content-wrapper{
     max-width: 960px;
   }
@@ -640,7 +706,7 @@ input[type=button]{
 
   .hero-area h1{
       font-size: 3.75em;
-      width: 60%;
+      width: 80%;
   }
 
   /************** Aside  *****************/
@@ -664,11 +730,29 @@ input[type=button]{
     flex-basis: 33%;
   }
   /*  Reviews  */
+  .reviews .content-wrapper{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .reviews figure{
+    display:flex;
+    width:49%;
+  }
+  .reviews img{
+    width: 100%;
+  }
+  
+  .reviews article{
+      display:flex;
+      justify-content: space-between;
+      width: 49%
+    }
   .reviews h2{
     width: 70%;
   }
   .reviews article div{
-    width: 50%;
+    width: 100%;
   }
   .copyright{
     padding-bottom: 15px;
