--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ footer .social-icons p{
 footer .copyright{
   width: 100%;
   text-align:center;
+  padding-bottom: 10px;
 }
 /*****************  Mobile Styles --  Homepage  ********************/
 
@@ -348,6 +349,23 @@ input[type=button]{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+
+.map figure{
+  width: 100%;
+  height: 0;
+  padding-bottom: 125%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .contact-section{
@@ -355,6 +373,7 @@ input[type=button]{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 .contact-content p{
   margin: 0;
